Project "PassFort" {
    database_type: 'PostgreSQL'
    Note: '''
        # Point of Sale System
    '''
}

// Users table

Enum "users_role_enum" {
    "admin"
    "user"
}

Table "users" {
    "id" uuid  [pk, increment]
    "name" varchar [not null]
    "email" varchar [not null]
    "password" varchar [not null]
    "master_password" varchar [null]
    "is_verified" boolean [null]
    "role" users_role_enum [default: "user"]
    "created_at" timestamptz [not null, default: `now()`]
    "updated_at" timestamptz [not null, default: `now()`]

    Indexes {
        email [unique, name: "email"]
    }
}

// Collections table

Table "collections" {
  "id" uuid [pk, increment]
  "name" varchar [not null]
  "description" varchar [null]
  "created_by" uuid
  "updated_by" uuid
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

}

Table "users_collections" {
  "user_id" uuid 
  "collection_id" uuid
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]


  Indexes {
    user_id [unique, name: "users_collections_user_id"]
  }
}

Ref: users.id < users_collections.user_id

Ref: collections.id < users_collections.collection_id

// Secrets table

Enum "secret_type_enum" {
  "password"
  "text"
  "file"
}

Table "secrets" {
  "id" uuid [pk, increment]
  "collection_id" uuid
  "secret_type" secret_type_enum
  "name" varchar [not null]
  "description" varchar [null]
  "created_by" uuid
  "updated_by" uuid
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "linked_secret_id" uuid
}

Ref: users.id < secrets.created_by
Ref: users.id < secrets.updated_by

Ref: collections.id < secrets.collection_id


// Password Secrets table

Table "password_secrets" {
  "id" uuid [pk, increment]
  "url" varchar [not null]
  "login" varchar [not null]
  "password" varchar [not null]
}

// Text Secrets table

Table "text_secrets" {
  "id" uuid [pk, increment]
  "text" varchar [not null]
}

Ref: secrets.linked_secret_id < password_secrets.id
Ref: secrets.linked_secret_id < text_secrets.id
